--- a/logicton-web/package.json
+++ b/logicton-web/package.json
@@ -17,13 +17,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "16.1.5",
+    "next": "^14.2.5",
     "next-auth": "^4.24.13",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "prisma": "^7.3.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
@@ -38,8 +38,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "fast-check": "^4.5.3",
     "jest": "^30.2.0",
     "tailwindcss": "^4",
